--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/ui": "^0.7.2",
+    "lightweight-charts": "^3.8.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.1"
