--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "^7.20.1",
     "@tailwindcss/ui": "^0.7.2",
+    "apexcharts": "^3.36.3",
+    "classnames": "^2.3.2",
+    "kaktana-react-lightweight-charts": "^2.0.0",
+    "krasulya-lightweight-charts": "^3.4.3",
     "lightweight-charts": "^3.8.0",
+    "lightweight-charts-react-wrapper": "^1.3.2",
     "react": "^17.0.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^5.2.1"
+    "react-router-dom": "^5.2.1",
+    "resize-observer": "^1.0.4",
+    "tslib": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
