--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.1",
+    "@headlessui/react": "^1.7.4",
     "@tailwindcss/ui": "^0.7.2",
     "apexcharts": "^3.36.3",
     "classnames": "^2.3.2",
