--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.1",
+    "react-tradingview-widget": "^1.3.2",
     "resize-observer": "^1.0.4",
     "tslib": "^2.4.1"
   },
